--- a/index.html
+++ b/index.html
@@ -175,6 +175,22 @@
 					<!-- skill item -->
 					<div class="skill-item">
 						<div class="skill-info clearfix">
+							<h4 class="float-left mb-3 mt-0">Bootstrap</h4>
+							<span class="float-right">90%</span>
+						</div>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="90">
+							</div>
+						</div>
+						<div class="spacer" data-height="50"></div>
+					</div>
+				</div>
+
+
+				<div class="col-md-6">
+					<!-- skill item -->
+					<div class="skill-item">
+						<div class="skill-info clearfix">
 							<h4 class="float-left mb-3 mt-0">Codeigniter</h4>
 							<span class="float-right">95%</span>
 						</div>
@@ -190,23 +206,8 @@
 					<!-- skill item -->
 					<div class="skill-item">
 						<div class="skill-info clearfix">
-							<h4 class="float-left mb-3 mt-0">HTML & CSS</h4>
-							<span class="float-right">90%</span>
-						</div>
-						<div class="progress">
-							<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="90">
-							</div>
-						</div>
-						<div class="spacer" data-height="50"></div>
-					</div>
-				</div>
-
-				<div class="col-md-6">
-					<!-- skill item -->
-					<div class="skill-item">
-						<div class="skill-info clearfix">
 							<h4 class="float-left mb-3 mt-0">jQuery</h4>
-							<span class="float-right">90%</span>
+							<span class="float-right">95%</span>
 						</div>
 						<div class="progress">
 							<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="90">
@@ -220,8 +221,36 @@
 					<!-- skill item -->
 					<div class="skill-item">
 						<div class="skill-info clearfix">
-							<h4 class="float-left mb-3 mt-0">ReactJS</h4>
+							<h4 class="float-left mb-3 mt-0">NodeJs</h4>
 							<span class="float-right">70%</span>
+						</div>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="70">
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<!-- skill item -->
+					<div class="skill-item">
+						<div class="skill-info clearfix">
+							<h4 class="float-left mb-3 mt-0">ReactJS</h4>
+							<span class="float-right">60%</span>
+						</div>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="70">
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<!-- skill item -->
+					<div class="skill-item">
+						<div class="skill-info clearfix">
+							<h4 class="float-left mb-3 mt-0">VueJS</h4>
+							<span class="float-right">60%</span>
 						</div>
 						<div class="progress">
 							<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="70">
