--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
 					</div>
 				</div>
 
-
 				<div class="col-md-6">
 					<!-- skill item -->
 					<div class="skill-item">
@@ -231,7 +230,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-6">
+				<div class="col-md-6 mt-5">
 					<!-- skill item -->
 					<div class="skill-item">
 						<div class="skill-info clearfix">
@@ -245,7 +244,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-6">
+				<div class="col-md-6 mt-5">
 					<!-- skill item -->
 					<div class="skill-item">
 						<div class="skill-info clearfix">
