--- a/index.html
+++ b/index.html
@@ -108,85 +108,85 @@
                     <div class="projects__content grid filters__active" data-content id="projects">
                         <article class="projects__card">
                             <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
-                            <img src="assets/img/project1.jpg" alt="" class="projects__img">
+                            <img src="assets/img/my/1.png" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">Web</span>
                                     <h3 class="projects__title">Company Profile</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <!-- <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
-                                    </a>
+                                    </a> -->
                                 </div>
                             </div>
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/project2.jpg" alt="" class="projects__img">
+                            <img src="assets/img/my/2.png" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">Web</span>
-                                    <h3 class="projects__title">Landing Page</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <h3 class="projects__title">Information Systems</h3>
+                                    <!-- <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
-                                    </a>
+                                    </a> -->
                                 </div>
                             </div>
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/project3.jpg" alt="" class="projects__img">
+                            <img src="assets/img/my/3.png" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">Web</span>
                                     <h3 class="projects__title">Employee Attendance</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <!-- <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
-                                    </a>
+                                    </a> -->
                                 </div>
                             </div>
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/project4.jpg" alt="" class="projects__img">
+                            <img src="assets/img/my/4.png" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">Web</span>
                                     <h3 class="projects__title">Production Report</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <!-- <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
-                                    </a>
+                                    </a> -->
                                 </div>
                             </div>
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/project5.jpg" alt="" class="projects__img">
+                            <img src="assets/img/my/5.png" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">Web</span>
                                     <h3 class="projects__title">Point of Sales</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <!-- <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
-                                    </a>
+                                    </a> -->
                                 </div>
                             </div>
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/project2.jpg" alt="" class="projects__img">
+                            <img src="assets/img/my/6.png" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">Web</span>
                                     <h3 class="projects__title">Ecommerce</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <!-- <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
-                                    </a>
+                                    </a> -->
                                 </div>
                             </div>
                         </article>
