--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
 
                     <h2 class="profile__name">Rochmad Hidayat</h2>
-                    <h3 class="profile__profession">Web developer</h3>
+                    <h3 class="profile__profession">Web Developer</h3>
 
                     <ul class="profile__social">
                         <a href="https://www.instagram.com/hidayathack/" target="_blank" class="profile__social-link">
